--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <table class="tabla">
                 <tr>
                     <td class="first" class="textoima" >
-                        <img class="imagenes" href="" class="social1" src="img/web.jpg" alt="">
+                        <img style="transform: rotate(-3deg);" class="imagenes" href="" class="social1" src="img/web.jpg" alt="">
                         <div class="textoencima1">Desarrollo <br/>Web</div>
                     </td>
                     <td class="second" class="textoima">
@@ -41,21 +41,21 @@
                         <div class="textoencima2">Android</div>
                     </td>
                     <td  class="third" class="textoima" >
-                        <img class="imagenes" href="" class="social1" src="img/ios.jpg" alt="">
+                        <img style="transform: rotate(3deg);" class="imagenes" href="" class="social1" src="img/ios.jpg" alt="">
                         <div class="textoencima3">iOS</div>
                     </td>
                 </tr>
             </table>
 
 
-            <table class="tabla1">
+            <table class="tabla1" class="nose">
                 <tr>
                     <td class="first" class="textoima" >
-                        <img class="imagenes" href="" class="social1" src="img/web.jpg" alt="">
+                        <img class="imagenes"  href="" class="social1" src="img/ios.jpg" alt="">
                         <div class="textoencima1">Desarrollo <br/>Web</div>
                     </td>
                     <td class="second" class="textoima">
-                        <img class="imagenes" href="" class="social1" src="img/android.jpg" alt="">
+                        <img class="imagenes" class="movimg" href="" class="social1" src="img/ios.jpg" alt="">
                         <div class="textoencima2">Android</div>
                     </td>
                     <td  class="third" class="textoima" >
