--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Portafolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="fonts" media="screen" />
     <link  rel="icon"   href="img/favicon.png" type="image/png" />
     <!--Favicon-->
     <link rel="" type="image/x-icon" href="">
@@ -26,7 +27,7 @@
             <!--imagen-->
             <div class="fondo" class="texto">
                 <img class="imagen" href="" class="social1" src="img/fondo.jpg" alt="">
-                <div class="textoencima">Desarrollo de Software</div>
+                <div class="textoencima" class="fuente">Desarrollo de Software</div>
                 <button class="btn-1"><a>Mirar Portafolio</a></button>
             </div>
 
@@ -76,7 +77,12 @@
     </div>
 
     <footer class="pie">
-            Copyright © 2020  Esteban González</p>
+            <p>Copyright © 2020  Esteban González
+                <span class="icon-web"></span>
+                <span class="icon-android"></span>
+                <span class="icon-ios"><span class="path1"></span><span class="path2"></span><span class="path3"></span></span>
+                
+            </p>
     </footer>
 </body>
 </html>
