--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300&display=swap" rel="stylesheet">
+    <!-- CSS only -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+<!-- JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <title>Portafolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,20 +22,36 @@
 <body>
     <div class="contenedor" id="header">
             <div>
-                <nav>
-                    <ul>
-                        <li><a href="">Contáctanos</a></li>
-                        <li><a href="">Portafolio</a></li>
-                        <li><a href="">Trabajos</a></li>
-                        <li><a href="">Inicio</a></li>
-                    </ul>
+
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="#"><img class="mac" href="#header" class="images" src="img/mac.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                      <ul class="navbar-nav">
+                        <li class="nav-item active">
+                          <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Trabajos</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Portafolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contáctenos</a>
+                          </li>
+                      </ul>
+                    </div>
                 </nav>
+
             </div>
 
             <!--imagen-->
             <div class="fondo" class="texto">
                 <img class="imagen" href="" class="social1" src="img/fondo.jpg" alt="">
-                <div class="textoencima" class="fuente">Desarrollo de Software</div>
+                <div class="textoencima" >Desarrollo de Software</div>
                 <button class="btn-1"><a>Mirar Portafolio</a></button>
             </div>
 
@@ -52,16 +76,34 @@
             <table class="tabla1" class="nose">
                 <tr>
                     <td class="first" class="textoima" >
-                        <img class="imagenes"  href="" class="social1" src="img/ios.jpg" alt="">
-                        <div class="textoencima1">Desarrollo <br/>Web</div>
+                        <div class="card" style="width: 18rem;">
+                            <img src="img/web.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Desarrollo Web</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>
                     </td>
                     <td class="second" class="textoima">
-                        <img class="imagenes" class="movimg" href="" class="social1" src="img/ios.jpg" alt="">
-                        <div class="textoencima2">Android</div>
+                        <div class="card" style="width: 18rem;">
+                            <img src="img/web.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Desarrollo Web</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>
                     </td>
                     <td  class="third" class="textoima" >
-                        <img class="imagenes" href="" class="social1" src="img/ios.jpg" alt="">
-                        <div class="textoencima3">iOS</div>
+                        <div class="card" style="width: 18rem;">
+                            <img src="img/web.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Desarrollo Web</h5>
+                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                          </div>
                     </td>
                 </tr>
             </table>
@@ -84,5 +126,7 @@
                 
             </p>
     </footer>
+
+   
 </body>
 </html>
