--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                           <a class="nav-link" href="#">Portafolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contáctenos</a>
+                            <a class="nav-link" href="./contactenos/index.html">Contáctenos</a>
                           </li>
                       </ul>
                     </div>
@@ -75,7 +75,7 @@
 
             <table class="tabla1" class="nose">
                 <tr>
-                    <td class="first" class="textoima" >
+                    <td>
                         <div class="card" style="width: 18rem;">
                             <img src="img/web.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -85,7 +85,7 @@
                             </div>
                           </div>
                     </td>
-                    <td class="second" class="textoima">
+                    <td>
                         <div class="card" style="width: 18rem;">
                             <img src="img/web.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -95,7 +95,7 @@
                             </div>
                           </div>
                     </td>
-                    <td  class="third" class="textoima" >
+                    <td>
                         <div class="card" style="width: 18rem;">
                             <img src="img/web.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -107,6 +107,29 @@
                     </td>
                 </tr>
             </table>
+
+
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./img/web.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./img/web2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./img/web3.jpg"class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
 
 
             <div class="social" >
