--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 </head>
 <body>
     <div class="contenedor" id="header">
-            <div>
 
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <a class="navbar-brand" href="#"><img class="mac" href="#header" class="images" src="img/mac.png" alt=""></a>
@@ -34,10 +33,10 @@
                           <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Trabajos</a>
+                          <a class="nav-link" href="./acerca/index.html">Acerca de</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Portafolio</a>
+                          <a class="nav-link" href="./portafolio/index.html">Portafolio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contactenos/index.html">Contáctenos</a>
@@ -71,65 +70,6 @@
                     </td>
                 </tr>
             </table>
-
-
-            <table class="tabla1" class="nose">
-                <tr>
-                    <td>
-                        <div class="card" style="width: 18rem;">
-                            <img src="img/web.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Desarrollo Web</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                          </div>
-                    </td>
-                    <td>
-                        <div class="card" style="width: 18rem;">
-                            <img src="img/web.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Desarrollo Web</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                          </div>
-                    </td>
-                    <td>
-                        <div class="card" style="width: 18rem;">
-                            <img src="img/web.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title">Desarrollo Web</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                          </div>
-                    </td>
-                </tr>
-            </table>
-
-
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="./img/web.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="./img/web2.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="./img/web3.jpg"class="d-block w-100" alt="...">
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
 
 
             <div class="social" >
